# tensorbored

./: .gitignore  ADDING_A_PLUGIN.md  AGENTS.md  AGENTS_DEV.md  AGENTS_DOC.md  BUILD  DEVELOPMENT.md  Dockerfile  NEW.md  README.md  RELEASE.md  WORKSPACE  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-demo.yml  nightly-release.yml  pr-preview.yml  upstream-sync.yml  wheel-prerelease.yml
ci/: bazelrc
demo/: .gitignore  Dockerfile  Dockerfile.wheel  README.md  generate_demo_data.py  start.sh
docs/: debugger_v2.md
docs/design/: colab_integration.md  generic_data_apis.md  generic_data_auth.md  rustboard.md
docs/r1/: histograms.md  overview.md  summaries.md
tensorboard/: BUILD
tensorboard/components/tf_imports/: BUILD  ibm_plex_mono.html  inter.html
tensorboard/components/vz_line_chart2/: BUILD  line-chart.ts  symlog-scale.ts
tensorboard/pip_package/: BUILD  setup.py  test_pip_package.sh
tensorboard/plugins/core/: BUILD  __init__.py  color_sampler.py  color_sampler_test.py  core_plugin.py  core_plugin_test.py  profile_writer.py  profile_writer_test.py
tensorboard/tools/: diagnose_tensorboard.py  set_nightly_version.sh  set_rc_version.sh
tensorboard/webapp/: BUILD  app_container.scss  app_module.ts  index_polymer3.uninlined.html  selectors.ts
tensorboard/webapp/dev_assets/: BUILD
tensorboard/webapp/header/: dark_mode_toggle_component.ts
tensorboard/webapp/metrics/: BUILD  internal_types.ts  testing.ts
tensorboard/webapp/profile/: BUILD  index.ts  types_test.ts
tensorboard/webapp/routes/: dashboard_deeplink_provider.ts  dashboard_deeplink_provider_test.ts
tensorbored/: BUILD  __init__.py  __main__.py  _module_alias.py  assets.py  assets_test.py  auth_test.py  context.py  context_test.py  data_compat.py  data_compat_test.py  dataclass_compat.py  dataclass_compat_test.py  default.py  default_test.py  encode_png_benchmark.py  errors_test.py  lazy.py  lazy_test.py  lib_test.py  main.py  main_dev.py  main_lib.py  manager.py  manager_e2e_test.py  notebook.py  plugin_util.py  plugin_util_test.py  program.py  program_test.py  test.py  torch.py  version_test.py
tensorbored/backend/: BUILD  application.py  application_test.py  auth_context_middleware.py  auth_context_middleware_test.py  client_feature_flags.py  client_feature_flags_test.py  empty_path_redirect_test.py  experiment_id.py  experiment_id_test.py  http_util.py  http_util_test.py  json_util.py  json_util_test.py  path_prefix.py  path_prefix_test.py  security_validator.py  security_validator_test.py
tensorbored/backend/event_processing/: BUILD  data_ingester.py  data_ingester_test.py  data_provider.py  data_provider_test.py  directory_loader.py  directory_loader_test.py  directory_watcher.py  directory_watcher_test.py  event_accumulator.py  event_accumulator_test.py  event_file_inspector.py  event_file_inspector_test.py  event_file_loader.py  event_file_loader_test.py  event_multiplexer.py  event_multiplexer_test.py  event_util.py  event_util_test.py  io_wrapper.py  io_wrapper_test.py  plugin_asset_util.py  plugin_event_accumulator.py  plugin_event_accumulator_test.py  plugin_event_multiplexer.py  plugin_event_multiplexer_test.py  reservoir.py  reservoir_test.py
tensorbored/compat/: BUILD  __init__.py
tensorbored/compat/proto/: BUILD  allocation_description.proto  api_def.proto  attr_value.proto  cluster.proto  config.proto  coordination_config.proto  cost_graph.proto  cpp_shape_inference.proto  debug.proto  event.proto  full_type.proto  function.proto  graph.proto  graph_debug_info.proto  histogram.proto  meta_graph.proto  node_def.proto  op_def.proto  proto_test.py  resource_handle.proto  rewriter_config.proto  rpc_options.proto  saved_object_graph.proto  saver.proto  step_stats.proto  struct.proto  summary.proto  tensor.proto  tensor_description.proto  tensor_shape.proto  tfprof_log.proto  trackable_object_graph.proto  types.proto  update.sh  variable.proto  verifier_config.proto  versions.proto
tensorbored/compat/tensorflow_stub/: BUILD  __init__.py  dtypes.py  errors.py  flags.py  pywrap_tensorflow.py  tensor_shape.py
tensorbored/components/: BUILD
tensorbored/components/polymer/: BUILD
tensorbored/components/tb_debug/: BUILD
tensorbored/components/tensor_widget/: BUILD  README.md
tensorbored/components/tf_backend/: BUILD
tensorbored/components/tf_card_heading/: BUILD  tf-card-heading.ts
tensorbored/components/tf_categorization_utils/: BUILD
tensorbored/components/tf_color_scale/: BUILD
tensorbored/data/: BUILD  grpc_provider.py  grpc_provider_test.py  ingester_test.py  provider.py  provider_test.py  server_ingester.py  server_ingester_test.py
tensorbored/defs/: BUILD  defs.bzl  inline_images.py  js.bzl  protos.bzl  tb_proto_library_test.py  test_downstream.proto  web.bzl  zipper.bzl
tensorbored/functionaltests/: BUILD  core_test.py
tensorbored/logo/: BUILD  inline_favicon.sh
tensorbored/pip_package/: BUILD  MANIFEST.in  README.rst  build_pip_package.sh  deterministic_tar_gz.py  deterministic_tar_gz_test.py  extract_pip_package.sh  setup.py  test_pip_package.sh
tensorbored/plugins/: BUILD  base_plugin.py  base_plugin_test.py
tensorbored/scripts/: BUILD  execrooter.py  generate_testdata.py
tensorbored/summary/: BUILD  __init__.py  _output.py  _output_test.py  _test_util.py  _writer.py  _writer_test.py  summary_test.py  tf_summary_test.py  v1.py  v2.py
tensorbored/tools/: BUILD  convert_tbdev_export.py  diagnose_tensorboard.py  license_test.sh  mat_bundle_icon_svg_test.py  set_nightly_version.sh  set_rc_version.sh  whitespace_hygiene_test.py
tensorbored/uploader/: BUILD  logdir_loader.py  logdir_loader_test.py  upload_tracker.py  upload_tracker_test.py  util_test.py
tensorbored/util/: BUILD  encoder.py  encoder_test.py  grpc_util.py  grpc_util_test.proto  grpc_util_test.py  io_util_test.py  lazy_tensor_creator.py  lazy_tensor_creator_test.py  op_evaluator.py  op_evaluator_test.py  platform_util_test.py  tb_logging.py  tensor_util.py  test_util.py  timing.py  timing_test.py
tensorbored/webapp/: BUILD  app_state.ts  styles.scss
(+597 files in other folders)
