[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorbored"
dynamic = ["version"]
description = "TensorBored: a PyTorch-first TensorBoard fork"
readme = "tensorboard/pip_package/README.rst"
license = {text = "Apache-2.0"}
authors = [
    {name = "TensorBored authors"}
]
keywords = ["pytorch", "tensorboard", "tensor", "machine learning", "visualizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Demonstrandum/tensorbored"
Repository = "https://github.com/Demonstrandum/tensorbored"
Documentation = "https://github.com/Demonstrandum/tensorbored#readme"

[project.scripts]
tensorboard = "tensorboard.main:run_main"
tensorbored = "tensorboard.main:run_main"

[project.entry-points."tensorboard_plugins"]
projector = "tensorboard.plugins.projector.projector_plugin:ProjectorPlugin"

[tool.black]
line-length = 80
# Keep targeting older Python to avoid reformatting existing code with
# Python 3.10+ syntax features (e.g., parenthesized context managers).
# The actual package requires Python >=3.9.
target-version = ["py38", "py39"]

[tool.setuptools.dynamic]
version = {attr = "tensorboard.version.VERSION"}
