[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorbored"
dynamic = ["version"]
description = "TensorBored: a PyTorch-first TensorBoard fork"
readme = "tensorbored/pip_package/README.rst"
license = {text = "Apache-2.0"}
authors = [
    {name = "TensorBored authors"}
]
keywords = ["pytorch", "tensorboard", "tensor", "machine learning", "visualizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "absl-py >= 0.4",
    "bleach >= 3.0.0",
    "grpcio >= 1.48.2",
    "markdown >= 2.6.8",
    "numpy >= 1.12.0",
    "packaging",
    "pillow",
    "protobuf >= 3.19.6, != 4.24.0",
    "setuptools >= 41.0.0",
    "tensorboard-data-server >= 0.7.0, < 0.8.0",
    "werkzeug >= 1.0.1",
]

[project.urls]
Homepage = "https://github.com/Demonstrandum/tensorbored"
Repository = "https://github.com/Demonstrandum/tensorbored"
Documentation = "https://github.com/Demonstrandum/tensorbored#readme"

[project.scripts]
tensorboard = "tensorbored.main:run_main"
tensorbored = "tensorbored.main:run_main"

[project.entry-points."tensorbored_plugins"]
projector = "tensorbored.plugins.projector.projector_plugin:ProjectorPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorbored*"]
exclude = ["tensorbored.*.tests", "tensorbored.*.tests.*"]

[tool.black]
line-length = 80
# Keep targeting older Python to avoid reformatting existing code with
# Python 3.10+ syntax features (e.g., parenthesized context managers).
# The actual package requires Python >=3.9.
target-version = ["py38", "py39"]

[tool.setuptools.dynamic]
version = {attr = "tensorbored.version.VERSION"}
